# QtLean

./: CMakeLists.txt  LICENSE  README.md  configure  install_dependencies.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake.yml
config/: config.json
scripts/: QtLean  install_user.sh  lean_builder.sh  py_config.sh
src/: MainWindow.cpp  MainWindow.h  MonoContainer.cpp  MonoContainer.h  PythonConfig.h.in  QJsonModel.cpp  QJsonModel.h  QLeanThread.h  TreeEditor.cpp  TreeEditor.h  main.cpp
src/assets/config/: config.json
